# spriter

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/spriter/: __about__.py  app.py
src/spriter/commands/: __init__.py  base.py  draw.py  frame_ops.py  layer_ops.py  transform.py
src/spriter/core/: __init__.py  animation.py  compositor.py  frame.py  layer.py  palette.py  settings.py  sprite.py
src/spriter/io/: __init__.py  gif_io.py  png_io.py  project_io.py  spritesheet.py
src/spriter/tools/: __init__.py  base.py  ellipse.py  eraser.py  eyedropper.py  fill.py  line.py  move.py  pencil.py  rectangle.py  select.py  text.py
src/spriter/ui/: __init__.py  canvas.py  color_picker.py  layers_panel.py  main_window.py  preferences.py  preview.py  timeline.py  toolbar.py
src/spriter/utils/: __init__.py  geometry.py
tests/: __init__.py  conftest.py  test_commands.py  test_compositor.py  test_draw_command.py  test_frame.py  test_frame_ops.py  test_geometry.py  test_io_phase7.py  test_layer.py  test_layer_ops.py  test_palette.py  test_project_io.py  test_sprite.py  test_tools_fill_eyedropper.py  test_tools_move_text.py  test_tools_pencil_eraser.py  test_tools_selection.py  test_tools_shapes.py  test_ui_phase3.py  test_ui_phase4.py  test_ui_phase5.py  test_ui_phase6.py  test_ui_phase8.py
